1.4.35 API and 1.4.54 Implementation